kubernetes/default/speedtest-tracker/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-tracker
  namespace: default
spec:
parentRefs:
  - name: internal
    namespace: network
  hostnames:
    - "speedtest.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: speedtest-tracker
          port: 80
